--- a/2 year/KMZI/src/kmzi_1/kmzi_1/kmzi_1.vcxproj.filters
+++ b/2 year/KMZI/src/kmzi_1/kmzi_1/kmzi_1.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Hill.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Haffman.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Hill.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Huffman.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
