--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 2 year/AOIS/src/MLP/MLP/data_batch_5.bin
 2 year/AOIS/src/MLP/MLP/lib_10k.txt
 2 year/AOIS/src/MLP/MLP/lib_MNIST_edit.txt
+2 year/AOIS/src/CNN/CNN/lib_10k.txt
+2 year/AOIS/src/CNN/CNN/lib_MNIST_edit.txt
