--- a/3 year/KMZI/kmzi_1/kmzi_1/kmzi_1.vcxproj.filters
+++ b/3 year/KMZI/kmzi_1/kmzi_1/kmzi_1.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="kmzi_1.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Crypt.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Crypt.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
