--- a/3 year/KMZI/kmzi_1/kmzi_1/kmzi_1.vcxproj
+++ b/3 year/KMZI/kmzi_1/kmzi_1/kmzi_1.vcxproj
@@ -130,7 +130,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Crypt.cpp" />
     <ClCompile Include="kmzi_1.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Crypt.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
