--- a/3 year/KMZI/src/kmzi_2.2/kmzi_2.2/kmzi_2.2.vcxproj.filters
+++ b/3 year/KMZI/src/kmzi_2.2/kmzi_2.2/kmzi_2.2.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="kmzi_2.2.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="RipeMD160_Hash.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="RipeMD160_Hash.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
