--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,16 @@
 3 year/KMZI/src/kmzi_3/client/kmzi_3_client/.vs/kmzi_3_client/v17/ipch/AutoPCH/d2e290abbd4ac177/TCP.ipch
 3 year/KMZI/src/kmzi_3/client/kmzi_3_client/.vs/kmzi_3_client/v17/ipch/AutoPCH/7b3679c2e7ededf/SAFECONNECTION.ipch
 3 year/KMZI/src/kmzi_3/client/kmzi_3_client/.vs/kmzi_3_client/v17/ipch/AutoPCH/138475a401a158a3/KMZI_3_CLIENT.ipch
+3 year/PBZ/src/PBZ_7/db.sqlite3
+3 year/PBZ/src/PBZ_7/myapp/__pycache__/admin.cpython-312.pyc
+3 year/PBZ/src/PBZ_7/myapp/__pycache__/models.cpython-312.pyc
+3 year/PBZ/src/PBZ_7/myapp/admin.py
+3 year/PBZ/src/PBZ_7/myapp/migrations/0003_match_stadium_team_delete_билеты_delete_клиенты_and_more.py
+3 year/PBZ/src/PBZ_7/myapp/migrations/__pycache__/0003_match_stadium_team_delete_билеты_delete_клиенты_and_more.cpython-312.pyc
+3 year/PBZ/src/PBZ_7/myapp/models.py
+3 year/PBZ/src/PBZ_7/db.sqlite3
+3 year/PBZ/src/PBZ_7/myapp/__pycache__/admin.cpython-312.pyc
+3 year/PBZ/src/PBZ_7/myapp/__pycache__/models.cpython-312.pyc
+3 year/PBZ/src/PBZ_7/myapp/admin.py
+3 year/PBZ/src/PBZ_7/myapp/models.py
+3 year/PBZ/src/PBZ_7/myapp/models.py
