--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,8 @@
 3 year/PBZ/src/PBZ_7/myapp/admin.py
 3 year/PBZ/src/PBZ_7/myapp/models.py
 3 year/PBZ/src/PBZ_7/myapp/models.py
+3 year/PBZ/src/PBZ_7/db.sqlite3
+3 year/PBZ/src/PBZ_7/myapp/__pycache__/admin.cpython-312.pyc
+3 year/PBZ/src/PBZ_7/myapp/__pycache__/models.cpython-312.pyc
+3 year/PBZ/src/PBZ_7/myapp/admin.py
+3 year/PBZ/src/PBZ_7/myapp/models.py
